perbaikan pada produk diamana field gambar sekarang menyimpan digunakan untuk menyimpan file di storage
